# juan-discord-bot

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: weather_command_test.rs
