[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
poise = "0.6.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = "0.12.4"
shuttle-runtime = "0.53.0"
shuttle-serenity = "0.53.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
